--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
     /* Note */
     #map-note{position:absolute; top:56px; left:18px; z-index:6; background: rgba(255,255,255,0.95); padding:8px 10px; border-radius:8px; display:none; font-size:13px; box-shadow:0 6px 18px rgba(15,23,36,0.14)}
 
-    /* Sidebar */
-    #sidebar{position:absolute; left:0; top:0; bottom:0; width:300px; background:linear-gradient(180deg, rgba(255,255,255,0.98), rgba(250,250,250,0.98)); z-index:4; padding:14px; overflow:auto; box-shadow:2px 0 18px rgba(2,6,23,0.12); border-right:1px solid rgba(2,6,23,0.04)}
+    /* Sidebar (moved to right side) */
+    #sidebar{position:absolute; right:0; top:0; bottom:0; width:300px; background:linear-gradient(180deg, rgba(255,255,255,0.98), rgba(250,250,250,0.98)); z-index:4; padding:14px; overflow:auto; box-shadow:-2px 0 18px rgba(2,6,23,0.12); border-left:1px solid rgba(2,6,23,0.04)}
     #sidebar.hidden{display:none}
     #sidebar h3{margin:0 0 8px 0; font-size:16px; color:var(--ui-text)}
     .model-row{padding:10px; border-radius:8px; display:flex; justify-content:space-between; gap:8px; align-items:flex-start}
@@ -92,8 +92,8 @@
             <div style="display:flex;align-items:center;gap:8px">
                 <div class="brand">Location</div>
                 <div style="display:flex;gap:8px;align-items:center">
-                    <button id="open-models-btn" class="btn secondary">Models</button>
-                    <button id="open-library-btn" class="btn secondary">Library</button>
+                    <button id="open-library-btn" class="btn secondary">Models</button>
+                    <button id="open-models-btn" class="btn secondary">Info</button>
                     <button id="share-btn" class="btn secondary">Share</button>
                 </div>
             </div>
@@ -753,7 +753,7 @@
     modelsBtn.addEventListener('click', () => {
         const wasHidden = sidebar.classList.contains('hidden');
         sidebar.classList.toggle('hidden');
-        modelsBtn.textContent = wasHidden ? 'Close' : 'Models';
+    modelsBtn.textContent = wasHidden ? 'Close' : 'Info';
         if (wasHidden) renderSidebar();
     });
 
